Autofill background issue solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,13 +29,13 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  background-color: rgba(255, 255, 255, 0.1) !important; /* Keep consistent background */
+  background-color: rgba(255, 255, 255, 0.1) !important;
   -webkit-box-shadow: 0 0 0px 1000px rgba(255, 255, 255, 0.1) inset !important;
   box-shadow: 0 0 0px 1000px rgba(255, 255, 255, 0.1) inset !important;
   color: white !important;
-  transition: background-color 5000s ease-in-out 0s; /* Prevent quick background color switch */
-  appearance: none !important; /* Remove default styling */
-  -webkit-text-fill-color: white !important; /* Ensure text color remains white */
+  transition: background-color 5000s ease-in-out 0s; 
+  appearance: none !important;
+  -webkit-text-fill-color: white !important;
 }
 
 html {
